tests/ui/dropck/relate_lt_in_type_outlives_bound.stderr
error[E0367]: `Drop` impl requires `T: 'static` but the struct it is implemented for does not
  --> $DIR/relate_lt_in_type_outlives_bound.rs:7:8
   |
LL |     T: 'static,
   |        ^^^^^^^
   |
note: the implementor must specify the same requirement
  --> $DIR/relate_lt_in_type_outlives_bound.rs:1:1
   |
LL | struct Wrapper<'a, T>(&'a T)
   | ^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0367`.
